--- a/index.html
+++ b/index.html
@@ -3,16 +3,75 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do App</title>
+    <head>
+  <title>Portfolio | {Your Name}</title>
+  <!-- Material Design Lite -->
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.amber-deep_purple.min.css">
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="styles/main.css">
+  <!--font awesome library -->
+  <script src="https://kit.fontawesome.com/318cdb3163.js" crossorigin="anonymous"></script>
+ </head>
+</head>
   </head>
   <body>
-    <h1>To-Do App</h1>
-    <form id="addToDoForm">
-      <label for="newToDoText">New To-Do:</label>
-      <input type="text" id="newToDoText">
-      <button type="submit">Add To-Do!</button>
-    </form>
-    <ul id="toDoList">
-    </ul>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <!-- Title -->
+          <span class="mdl-layout-title">To-Do App</span>
+          <!-- Add spacer, to align navigation to the right -->
+          <div class="mdl-layout-spacer"></div>
+          <!-- Navigation. We hide it in small screens. -->
+          <nav class="mdl-navigation mdl-layout--large-screen-only">
+            <a class="mdl-navigation__link" href="">About</a>
+            <a class="mdl-navigation__link" href="">FAQ</a>
+            <a class="mdl-navigation__link" href="">Support</a>
+            <a class="mdl-navigation__link" href="">Contact</a>
+          </nav>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <div class="page-content">
+          <div class="demo-card-wide mdl-card mdl-shadow--2dp header_box ">
+            <div class="mdl-card__title">
+              <h2 class="mdl-card__title-text">New To-Do Item</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+              <form id="addToDoForm">
+                <!-- <label for="newToDoText">New To-Do:</label> -->
+                <input type="text" placeholder="Enter a new item" id="newToDoText">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" type="submit">Add To-Do</button>
+              </form>
+            </div>
+          </div>
+          <div class="demo-card-wide mdl-card mdl-shadow--2dp">
+            <!-- <div class="mdl-card__supporting-text"> -->
+            <div>
+              <span class = "mdl-list__item-primary-content">
+                <ul id="toDoList">
+                </ul>
+              </span>
+<!-- code below is for the MDN example here https://getmdl.io/components/index.html#lists-section -->
+              <!-- <ul>
+                <li class="mdl-list__item">
+                <li>
+                  <span class="mdl-list__item-primary-content">
+                  </span>
+                  <span class="mdl-list__item-secondary-action">
+                    <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="list-checkbox-1">
+                    <input type="checkbox" id="list-checkbox-1" class="mdl-checkbox__input" checked />
+                  </label>
+                  </span>
+                </li>
+              </ul> -->
+            </div>
+          </div>
+
+
+
+      </main>
     <script src="app.js">
     </script>
   </body>
